--- a/front/index.html
+++ b/front/index.html
@@ -24,33 +24,33 @@
     </p>
     <h2>Содержание</h2>
     <ol>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%98%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%8F">История</a></li>
+      <li><a href="#anchor">История</a></li>
         <ol>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%AD%D1%82%D0%B8%D0%BC%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D0%B8_%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">Этимология, прозвища</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%AD%D1%82%D0%B8%D0%BC%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F_%D0%B8_%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">Основание</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#XX_%D0%B2%D0%B5%D0%BA">XX век</a></li>
+          <li><a href="#ancor1">Этимология, прозвища</a></li>
+          <li><a href="#ancor2">Основание</a></li>
+          <li><a href="#ancor3">XX век</a></li>
         </ol>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%A4%D0%B8%D0%B7%D0%B8%D0%BA%D0%BE-%D0%B3%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D1%85%D0%B0%D1%80%D0%B0%D0%BA%D1%82%D0%B5%D1%80%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B0">Физико-географическая характеристика</a></li>
+      <li><a href="#ancor4">Физико-географическая характеристика</a></li>
         <ol>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Географическое положение и климат</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Рельеф, внутренние воды</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Флора и фауна</a></li>
+          <li><a href="#ancor5">Географическое положение и климат</a></li>
+          <li><a href="#ancor6">Рельеф, внутренние воды</a></li>
+          <li><a href="#ancor7">Флора и фауна</a></li>
         </ol>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Экономика</a></li>
+      <li><a href="#ancor8">Экономика</a></li>
         <ol>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Общее состояние</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Энергетика и нефтехимия</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Авиакосмическая промышленность</a></li>
+          <li><a href="#ancor9">Общее состояние</a></li>
+          <li><a href="#ancor10">Энергетика и нефтехимия</a></li>
+          <li><a href="#ancor11">Авиакосмическая промышленность</a></li>
         </ol>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Население</a></li>
+      <li><a href="#ancor12">Население</a></li>
         <ol>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Динамика и структура населения</a></li>
-          <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Этнический и конфессиональный состав, языки</a></li>
+          <li><a href="#ancor13">Динамика и структура населения</a></li>
+          <li><a href="#ancor14">Этнический и конфессиональный состав, языки</a></li>
         </ol>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Средства массовой информации</a></li>
-      <li><a href="https://ru.wikipedia.org/wiki/%D0%A5%D1%8C%D1%8E%D1%81%D1%82%D0%BE%D0%BD#%D0%93%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D1%84%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%BF%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5">Города-побратимы</a></li>
+      <li><a href="#ancor15">Средства массовой информации</a></li>
+      <li><a href="#ancor16">Города-побратимы</a></li>
     </ol>
-    <h2>История</h2>
+    <h2 id="anchor">История</h2>
     <h3>Этимология, прозвища</h3>
     <img src="Sam_Houston_portrait.jpg" alt="Сэмюэл Хьюстон">
     <p>
@@ -62,7 +62,7 @@
     <p>
       В американской разговорной речи есть популярная фраза: «Хьюстон, у нас проблема» (англ. Houston, we’ve had a problem), появившаяся после неудачной миссии Аполлон-13. В Хьюстоне проходили съёмки фильма «Аполлон-13», в основу сюжета которого легли реальные события миссии.
     </p>
-    <h2>Основание</h2>
+    <h2 id="ancor1">Основание</h2>
     <img src="330px-Allen's_Landing_Houston_bayou_view.jpg" alt="Allen’s Landing — место, где был основан город">
     <p>
       После окончания войны за независимость Техаса, в августе 1836 года предприниматели братья Август и Джон Аллены купили 26,9 км² земли вдоль реки Буффало-Байю, планируя основать на ней населённый пункт. Они хотели, чтобы будущий город стал столицей Техаса и крупным торговым центром.
@@ -70,8 +70,32 @@
     <p>
       Датой основания города принято считать 30 августа 1836 года, когда братья Аллены разместили объявление о появлении города. Город назвали в честь генерала Сэма Хьюстона, возглавлявшего армию техасцев в битве при Сан-Хасинто во время войны против Мексики, позже избранного президентом Техаса. На январь 1837 года в посёлке проживало всего 12 человек, однако через четыре месяца население возросло до 1 500 человек. 5 июня 1837 года город был включён в округ Гаррисберг (ныне Харрис) и стал временной столицей Республики Техас, которой оставался до 1839 года. Первым мэром Хьюстона стал Джеймс Холман. 
     </p>
-    <h2>XX век</h2>
+    <h2 id="ancor2">XX век</h2>
     <img src="Main_Street_looking_south_Houston_Texas_(1908).jpg" alt="Мэйн-Стрит в центре, 1908 год">
-    
+    <p>
+      В 1900 году на Хьюстон обрушился Галвестонский ураган, продолжавшийся с 27 августа по 12
+      сентября. В пересчете на сегодняшний курс ущерб составил бы $526 млн, погибло 8 тысяч человек. В
+      следующем году было найдено большое месторождение нефти вблизи города Бомонт, что послужило
+      началом развития нефтяной промышленности в Техасе. В 1902 году президент США Теодор Рузвельт
+      утвердил проект стоимостью в $1 млн на реконструкцию хьюстонского судоходного канала. К 1910
+      году численность населения города достигла 78 800 человек, почти в два раза превысив количество
+      жителей проживавших в Хьюстоне в 1900 году. В 1914 году президент США Вудро Вильсон принял
+      участие в открытии нового глубоководного порта Хьюстона, а через год был открыт хьюстонский
+      судоходный канал.
+    </p>
+    <p>
+      В 1945 году было начато формирование Техасского медицинского центра. В конце 1940-х несколько
+      пригородов были включены в городскую черту, в результате чего площадь Хьюстона увеличилась
+      более чем в два раза. В 1950-е годы управления многих крупных (в основном нефтяных) компаний
+      США переместились в Хьюстон, что благоприятно отразилось на экономике города, одним из
+      поводов для переезда послужило массовое оснащение всех офисов кондиционерами.
+    </p>
+    <blockquote class="начало цитаты">
+      <p>
+         Именно кондиционирование воздуха! Именно оно было основой для стремительного
+        роста Хьюстона в 1950 году, когда он стал наиболее оснащённым кондиционерами
+        городом в мире. Именно это стимулировало многие корпорации переместить свои штабквартиры в Хьюстон.
+      </p>
+    </blockquote>
   </body>
 </html>
